--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="DatabaseRequests.cs" />
     <Compile Include="DataControl.cs" />
+    <Compile Include="DataWrapper.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="LoginRequests.cs" />
     <Compile Include="Physics.cs" />
