Overhaul of game state management. Each state has its own controller Screen

--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -35,6 +35,9 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Controllers\GameplayScreen.cs" />
+    <Compile Include="Controllers\MainMenuScreen.cs" />
+    <Compile Include="PlayButton.cs" />
     <Compile Include="Tools\AnimationClass.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
