--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -42,9 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data.cs" />
     <Compile Include="DatabaseRequests.cs" />
     <Compile Include="DataControl.cs" />
-    <Compile Include="DataWrapper.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="LoginRequests.cs" />
     <Compile Include="Physics.cs" />
