Added some comments to the classes.

--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Data.cs" />
     <Compile Include="DatabaseRequests.cs" />
     <Compile Include="DataControl.cs" />
+    <Compile Include="DataReceiving.cs" />
+    <Compile Include="DataTransmission.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="LoginRequests.cs" />
     <Compile Include="Physics.cs" />
