--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -48,11 +48,14 @@
     <Compile Include="DataReceiving.cs" />
     <Compile Include="DataTransmission.cs" />
     <Compile Include="GameData.cs" />
-    <Compile Include="LoginData.cs" />
+    <Compile Include="GameMessage.cs" />
+    <Compile Include="Gameroom.cs" />
     <Compile Include="LoginRequests.cs" />
     <Compile Include="Physics.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
