--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="Controllers\ShipSelectionScreen.cs" />
     <Compile Include="GUI.cs" />
     <Compile Include="Controllers\GameplayScreen.cs" />
     <Compile Include="Controllers\MainMenuScreen.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="Tools\AssetManager.cs" />
+    <Compile Include="Tools\GeneralButton.cs" />
     <Compile Include="Tools\Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
