added various functionalities.

--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DataControl.cs" />
     <Compile Include="DataReceiving.cs" />
     <Compile Include="DataTransmission.cs" />
+    <Compile Include="ErrorMessage.cs" />
     <Compile Include="GameData.cs" />
     <Compile Include="GameMessage.cs" />
     <Compile Include="Gameroom.cs" />
