--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="WinFlag.cs" />
     <Compile Include="Controllers\TeamBattleScreen.cs" />
     <Compile Include="GUI.cs" />
     <Compile Include="Controllers\GameplayScreen.cs" />
