--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="Tools\AssetManager.cs" />
+    <Compile Include="Tools\BaseButton.cs" />
     <Compile Include="Tools\Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
