--- a/Server/Server Application/Server Application/Server Application.csproj
+++ b/Server/Server Application/Server Application/Server Application.csproj
@@ -42,27 +42,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants.cs" />
-    <Compile Include="Data.cs" />
     <Compile Include="DatabaseRequests.cs" />
-    <Compile Include="DataControl.cs" />
     <Compile Include="DataReceiving.cs" />
     <Compile Include="DataTransmission.cs" />
-    <Compile Include="ErrorMessage.cs" />
-    <Compile Include="GameData.cs" />
-    <Compile Include="GameMessage.cs" />
-    <Compile Include="Gameroom.cs" />
-    <Compile Include="GameSetupMessage.cs" />
     <Compile Include="LoginRequests.cs" />
     <Compile Include="Physics.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="TransmissionSerializationBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data Manipulation\Data Manipulation.csproj">
+      <Project>{93ea3317-84d9-4b61-9c03-020646b3eb05}</Project>
+      <Name>Data Manipulation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Data Structures\Data Structures.csproj">
+      <Project>{b5c87f97-793c-436f-be66-bda78f9a7046}</Project>
+      <Name>Data Structures</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
