Changed assembly name of all server projects.

--- a/Server/Server Application/Data Manipulation/Data Manipulation.csproj
+++ b/Server/Server Application/Data Manipulation/Data Manipulation.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Data_Manipulation</RootNamespace>
-    <AssemblyName>Data Manipulation</AssemblyName>
+    <AssemblyName>Space Union</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
