--- a/Server/Server Application/Data Structures/Data Structures.csproj
+++ b/Server/Server Application/Data Structures/Data Structures.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Data_Structures</RootNamespace>
-    <AssemblyName>Data Structures</AssemblyName>
+    <AssemblyName>Space Union</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
