updated client comm module

--- a/Server/Server Application/Client Comm Module/Client Comm Module.csproj
+++ b/Server/Server Application/Client Comm Module/Client Comm Module.csproj
@@ -40,6 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientCommHandler.cs" />
+    <Compile Include="ClientConstants.cs" />
+    <Compile Include="ClientDataReceiving.cs" />
+    <Compile Include="ClientDataTransmission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
