changed rotation math from cos0 to -cos0 to keep vector math simple and consistent

--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -46,7 +46,8 @@
     <Compile Include="PlayButton.cs" />
     <Compile Include="StellarObjects\Planet.cs" />
     <Compile Include="Timer.cs" />
-    <Compile Include="Projectile.cs" />
+    <Compile Include="Weapons\Laser.cs" />
+    <Compile Include="Weapons\Projectile.cs" />
     <Compile Include="Tools\AnimationClass.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
