--- a/Server/Server Application/Data Structures/Data Structures.csproj
+++ b/Server/Server Application/Data Structures/Data Structures.csproj
@@ -47,7 +47,14 @@
     <Compile Include="GameSetupMessage.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration.cs" />
     <Compile Include="RegistrationData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data Manipulation\Data Manipulation.csproj">
+      <Project>{93ea3317-84d9-4b61-9c03-020646b3eb05}</Project>
+      <Name>Data Manipulation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
