--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -35,9 +35,22 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Camera.cs" />
+    <Compile Include="HitBox.cs" />
+    <Compile Include="GUI.cs" />
+    <Compile Include="Controllers\GameplayScreen.cs" />
+    <Compile Include="Controllers\MainMenuScreen.cs" />
+    <Compile Include="PlayButton.cs" />
+    <Compile Include="StellarObjects\Planet.cs" />
+    <Compile Include="Timer.cs" />
+    <Compile Include="Projectile.cs" />
+    <Compile Include="Tools\AnimationClass.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship.cs" />
+    <Compile Include="Tools\AssetManager.cs" />
+    <Compile Include="Tools\Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -48,6 +61,20 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Server\Server Application\Client Comm Module\Client Comm Module.csproj">
+      <Project>{b0d9e654-2f4c-4891-9dac-86af01c74ee8}</Project>
+      <Name>Client Comm Module</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Server\Server Application\Data Structures\Data Structures.csproj">
+      <Project>{b5c87f97-793c-436f-be66-bda78f9a7046}</Project>
+      <Name>Data Structures</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SpaceUnionContent\SpaceUnionContent\SpaceUnionContent.csproj">
+      <Project>{9e4de6ae-a715-4255-9cd6-fd886c92e542}</Project>
+      <Name>SpaceUnionContent</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\" />
