--- a/SpaceUnionContent/SpaceUnionContent/SpaceUnionContent.csproj
+++ b/SpaceUnionContent/SpaceUnionContent/SpaceUnionContent.csproj
@@ -2,7 +2,8 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.ContentPipeline.targets" />
   <PropertyGroup>
-    <ProjectGuid>{B1DF28CA-EEE8-4BC9-A01E-06D81860166F}</ProjectGuid>
+    <ProjectGuid>{9E4DE6AE-A715-4255-9CD6-FD886C92E542}</ProjectGuid>
+    <ProjectGuid>{9E4DE6AE-A715-4255-9CD6-FD886C92E542}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Windows</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -16,6 +17,7 @@
     <OutputPath>bin\$(Configuration)</OutputPath>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>HiDef</XnaProfile>
+    <XnaCrossPlatformGroupID>34af34eb-c5ec-4414-95d9-fb9b396cc028</XnaCrossPlatformGroupID>
     <XnaCrossPlatformGroupID>bd4b7c0e-1934-4de5-9989-aa3c6246a4d1</XnaCrossPlatformGroupID>
     <XnaOutputType>Library</XnaOutputType>
     <PlatformTarget>x86</PlatformTarget>
