--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Compile Include="Animations\BigExplosion.cs" />
     <Compile Include="Animations\Explosion.cs" />
-    <Compile Include="Camera.cs" />
+    <Compile Include="Tools\Camera.cs" />
     <Compile Include="Animations\ShortExplosion.cs" />
     <Compile Include="HitBox.cs" />
     <Compile Include="GUI.cs" />
@@ -55,7 +55,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ship.cs" />
+    <Compile Include="Ships\Ship.cs" />
     <Compile Include="Tools\AssetManager.cs" />
     <Compile Include="Tools\BaseButton.cs" />
     <Compile Include="Tools\ExplosionEngine.cs" />
