--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -54,6 +54,8 @@
     <Compile Include="StellarObjects\Asteroid.cs" />
     <Compile Include="StellarObjects\Planet.cs" />
     <Compile Include="Timer.cs" />
+    <Compile Include="Tools\CollisionHandler.cs" />
+    <Compile Include="Tools\MultiValueDictionary.cs" />
     <Compile Include="Weapons\Laser.cs" />
     <Compile Include="Weapons\Projectile.cs" />
     <Compile Include="Tools\AnimationClass.cs" />
@@ -73,6 +75,9 @@
       <HintPath>$(MSBuildProgramFiles32)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
