--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -37,6 +37,11 @@
   <ItemGroup>
     <Compile Include="Animations\BigExplosion.cs" />
     <Compile Include="Animations\Explosion.cs" />
+    <Compile Include="Controllers\GameRoom.cs" />
+    <Compile Include="Controllers\GameLobby.cs" />
+    <Compile Include="Controllers\LobbyBrowser.cs" />
+    <Compile Include="Controllers\CreateLobby.cs" />
+    <Compile Include="Controllers\LobbyOptions.cs" />
     <Compile Include="Ships\Bug.cs" />
     <Compile Include="Ships\Copy of Ship.cs" />
     <Compile Include="Ships\Stunt.cs" />
@@ -46,6 +51,7 @@
     <Compile Include="StellarObjects\LargeMassObject.cs" />
     <Compile Include="Tools\Camera.cs" />
     <Compile Include="Animations\ShortExplosion.cs" />
+    <Compile Include="Tools\CustomGUI.cs" />
     <Compile Include="Tools\HitBox.cs" />
     <Compile Include="Controllers\ShipSelectionScreen.cs" />
     <Compile Include="GUI.cs" />
