laserbeam is more accurate but doesn't draw correctly when hitting a target

--- a/Client/SpaceUnion.csproj
+++ b/Client/SpaceUnion.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Controllers\CreateLobby.cs" />
     <Compile Include="Controllers\LobbyOptions.cs" />
     <Compile Include="Ships\Bug.cs" />
+    <Compile Include="Tools\HitCircle.cs" />
     <Compile Include="Tools\QuadTree.cs" />
     <Compile Include="Tools\Ray2.cs" />
     <Compile Include="Weapons\Systems\LaserBeam.cs" />
