--- a/Database/AdminControlForm/AdminControlForm/AdminControlForm.csproj
+++ b/Database/AdminControlForm/AdminControlForm/AdminControlForm.csproj
@@ -59,31 +59,6 @@
       <DependentUpon>AcceptCancelBlockActionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="BlockUnblockUserValidation.cs" />
-    <Compile Include="Model1.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Model1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SpaceUnionModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="sysdiagram.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="User.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UserStat.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UserTableAccess.cs" />
     <Compile Include="UserValidation.cs" />
     <Compile Include="AdminForm.cs">
       <SubType>Form</SubType>
@@ -109,23 +84,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EntityDeploy Include="SpaceUnionModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SpaceUnionModel.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="Model1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
-    </None>
-    <None Include="SpaceUnionModel.edmx.diagram">
-      <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
-    </None>
-    <None Include="Model1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.cs</LastGenOutput>
-      <DependentUpon>SpaceUnionModel.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -148,6 +106,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\dark_space.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SpaceUnionDatabase\SpaceUnionDatabase\SpaceUnionDatabase.csproj">
+      <Project>{45ed07c7-ca09-4371-912a-5dd22323bb40}</Project>
+      <Name>SpaceUnionDatabase</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
