--- a/Database/SpaceUnionDatabase/packages/repositories.config
+++ b/Database/SpaceUnionDatabase/packages/repositories.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\SpaceUnionDatabaseAccess\packages.config" />
+  <repository path="..\SpaceUnionDatabase\packages.config" />
 </repositories>
